--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,19 @@
+/* Google fonts */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+::before,
+::after {
+  box-sizing: border-box;
+}
+
 body {
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
+  background-color: #f5f5f5;
 }
