--- a/css/login/form.css
+++ b/css/login/form.css
@@ -13,10 +13,32 @@
   --small-font-size: 0.75rem;
 }
 
-h1 {
-  margin-left: 6rem;
-  margin-top: 1rem;
-  color: #1c2237;
+/* Main form styling */
+.l-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 90vh;
+  margin: 24px;
+}
+
+.form {
+  width: 360px;
+  padding: 3rem 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 10px 25px rgba(92, 99, 105, 0.3);
+  background-color: #f5f5f5;
+}
+
+.form__title {
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
+
+.form__div {
+  position: relative;
+  height: 48px;
+  margin-bottom: 1.5rem;
 }
 
 .book__icon {
@@ -24,29 +46,10 @@ h1 {
   margin-left: 6rem;
 }
 
-.l-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 90vh;
-}
-
-.form {
-  width: 360px;
-  padding: 4rem 2rem;
-  border-radius: 1rem;
-  box-shadow: 0 10px 25px rgba(92, 99, 105, 0.3);
-}
-
-.form__title {
-  font-weight: 500;
-  margin-bottom: 3rem;
-}
-
-.form__div {
-  position: relative;
-  height: 48px;
-  margin-bottom: 1.5rem;
+h1 {
+  margin-left: 5.5rem;
+  margin-top: 1rem;
+  color: #1c2237;
 }
 
 .form__input {
@@ -79,6 +82,7 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 2rem;
   padding: 0.75rem 2rem;
   outline: none;
   border: none;
@@ -91,7 +95,7 @@ h1 {
 }
 
 .form__button:hover {
-  box-shadow: 0 10px 36px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 36px rgba(0, 0, 0, 0.4);
 }
 
 .form__input:focus + .form__label {
@@ -114,4 +118,15 @@ h1 {
 
 .form__input:focus {
   border: 1.5px solid var(--first-color);
+}
+
+/* Password icon */
+.pass__icon {
+  font-size: 1rem;
+  position: absolute;
+  right: 5%;
+  top: 30%;
+  cursor: pointer;
+  color: #696969;
+  z-index: 1;
 }
