--- a/css/main.css
+++ b/css/main.css
@@ -15,5 +15,5 @@
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  background-color: #f5f5f5;
+  background-color: rgb(229, 228, 226);
 }
