--- a/css/main.css
+++ b/css/main.css
@@ -15,5 +15,16 @@
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  background-color: rgb(229, 228, 226);
+}
+
+:root {
+  /* Colors */
+  --first-color: #1a73e8;
+  --input-color: #80868b;
+  --border-color: #dadce0;
+
+  /* Font */
+  --body-font: "Roboto", sans-serif;
+  --normal-font-size: 1rem;
+  --small-font-size: 0.75rem;
 }
