--- a/css/login/form.css
+++ b/css/login/form.css
@@ -130,3 +130,25 @@ h1 {
   color: #696969;
   z-index: 1;
 }
+
+/* Error message */
+.error_username,
+.error_password {
+  position: relative;
+  color: red;
+  font-size: 12px;
+  bottom: 14px;
+  left: 12px;
+  display: none;
+}
+
+/* Show/Hide error messages  */
+.active {
+  display: inline-block;
+}
+
+/* Disable login button on invalid credentials */
+.form__button_disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
