--- a/views/admin_home.ejs
+++ b/views/admin_home.ejs
@@ -8,11 +8,11 @@
     <!-- Font Awesome CDN(required for icons)-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
+    <link rel="stylesheet" href="./css/table.css">
     <link rel="stylesheet" href="./css/admin.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/sidebar.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/table.css">
 </head>
 
 <body>
@@ -80,8 +80,9 @@
                 </li>
             </ul>
         </nav>
+    </div>
 
-
+    <div class="admin-tables">
         <table>
             <thead>
                 <tr>
@@ -143,7 +144,6 @@
                     <% }) %>
             </tbody>
         </table>
-
     </div>
     <!--Common Footer across all pages-->
     <!-- Create a separate footer.html & include it using jquery -->
